Fixed bug #44929 - Better handling of leading zeros